Ibrahim DEV/src/objects/ligne_de_paie__c.object
<CustomObject>
    <fields>
        <fullName>Heure_nuit_r__c</fullName>
        <label>Heure nuit</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heure_r__c</fullName>
        <label>Heure realisee</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>id_contrat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>id_constrat</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>annee__c</fullName>
        <label>annee</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>heure_soire_maj_1_5__c</fullName>
        <label>Heure soir</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mois__c</fullName>
        <label>mois</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>poste__c</fullName>
        <label>poste</label>
        <referenceTo>poste__c</referenceTo>
        <relationshipLabel>lignes des paies</relationshipLabel>
        <relationshipName>lignes_des_paies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>semaine__c</fullName>
        <label>semaine</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ligne de paie</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de ligne de paie</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>lignes des paies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>